# elm327_obdii

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: network-tests.yml  pytest.yml  python-publish.yml
src/elm327_obdii/: __init__.py  __main__.py  formatting.py  forms.py  polling.py  probing.py  transport_ble.py
src/elm327_obdii/_core/: __init__.py  can_context.py  elm327_parsing.py  fmt_evaluator.py  query_items.py  schema.py  standard_pids.py
src/elm327_obdii/profiles/: __init__.py  fetch.py  importer.py  obdb.py  wican.py
tests/: __init__.py  conftest.py  test_elm327_parsing.py  test_fmt_evaluator.py  test_forms.py  test_obdb_importer.py  test_obdb_live_vehicles.py  test_obdb_matrix_live.py  test_obdb_yaml_fixtures.py  test_polling.py  test_query_items.py  test_standard_pids.py  test_wican_importer.py  test_wican_profiles_live.py
tests/fixtures/obdb_egolf/: 710.77A.222AB2_fc=1.yaml  710.77A.222AB8_fc=1.yaml  714.77E.222203.yaml  7E0.0104.yaml  7E0.0105.yaml  7E0.010D.yaml  7E0.0131.yaml  7E0.0142.yaml  7E0.7E8.221164.yaml  7E5.7ED.22028C.yaml  7E5.7ED.221E32.yaml  7E5.7ED.221E3B.yaml  7E5.7ED.221E3D.yaml  README.md  default.json
