[project]
name = "elm327_obdii"
version = "0.0.2"
license = {text = "Apache-2.0"}
authors = [
    { name="tronikos", email="tronikos@gmail.com" },
]
description = "A Python library for reading vehicle diagnostic data from ELM327 BLE OBD-II adapters"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.8",
    "bleak>=0.22",
    "bleak-retry-connector>=3.4",
    "bluetooth-data-tools>=1.0",
    "py-obdii>=0.10.5b0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pyyaml",
]
cli = []

[project.urls]
"Homepage" = "https://github.com/tronikos/elm327_obdii"
"Bug Tracker" = "https://github.com/tronikos/elm327_obdii/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
elm327_obdii = ["py.typed"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
  "A001",   # Variable {name} is shadowing a Python builtin
  "ASYNC",  # flake8-async
  "B",      # flake8-bugbear
  "BLE",
  "C",      # complexity
  "COM818", # Trailing comma on bare tuple prohibited
  "D",      # docstrings
  "DTZ003", # Use datetime.now(tz=) instead of datetime.utcnow()
  "DTZ004", # Use datetime.fromtimestamp(ts, tz=) instead of datetime.utcfromtimestamp(ts)
  "DTZ011", # Use datetime.now(tz=).date() instead of date.today()
  "E",      # pycodestyle
  "F",      # pyflakes/autoflake
  "F541",   # f-string without any placeholders
  "FLY",    # flynt
  "FURB",   # refurb
  "G",      # flake8-logging-format
  "I",      # isort
  "INP",    # flake8-no-pep420
  "ISC",    # flake8-implicit-str-concat
  "ICN001", # import concentions; {name} should be imported as {asname}
  "LOG",    # flake8-logging
  "N804",   # First argument of a class method should be named cls
  "N805",   # First argument of a method should be named self
  "N806",   # Variable {name} in function should be snake_case
  "N815",   # Variable {name} in class scope should not be mixedCase
  "PERF",   # Perflint
  "PGH",    # pygrep-hooks
  "PIE",    # flake8-pie
  "PL",     # pylint
  "PT",     # flake8-pytest-style
  "PTH",    # flake8-pathlib
  "PYI",    # flake8-pyi
  "RET",    # flake8-return
  "RSE",    # flake8-raise
  "RUF",    # Ruff-specific rules (see `ignore` for exclusions)
  "S107",   # Possible hardcoded password assigned to function default
  "S102",   # Use of exec detected
  "S103",   # bad-file-permissions
  "S108",   # hardcoded-temp-file
  "S301",   # suspicious-pickle-usage
  "S306",   # suspicious-mktemp-usage
  "S307",   # suspicious-eval-usage
  "S313",   # suspicious-xmlc-element-tree-usage
  "S314",   # suspicious-xml-element-tree-usage
  "S315",   # suspicious-xml-expat-reader-usage
  "S316",   # suspicious-xml-expat-builder-usage
  "S317",   # suspicious-xml-sax-usage
  "S318",   # suspicious-xml-mini-dom-usage
  "S319",   # suspicious-xml-pull-dom-usage
  "S601",   # paramiko-call
  "S602",   # subprocess-popen-with-shell-equals-true
  "S604",   # call-with-shell-equals-true
  "S608",   # hardcoded-sql-expression
  "S609",   # unix-command-wildcard-injection
  "SIM",    # flake8-simplify
  "SLF",    # flake8-self
  "SLOT",   # flake8-slots
  "T100",   # Trace found: {name} used
  "T20",    # flake8-print
  "TC",     # flake8-type-checking
  "TID",    # Tidy imports
  "TRY",    # tryceratops
  "UP",     # pyupgrade
  "UP031",  # Use format specifiers instead of percent format
  "UP032",  # Use f-string instead of `format` call
  "W",      # pycodestyle
]

ignore = [
  "E501",     # line too long

  "PLR0911", # Too many return statements
  "PLR0912", # Too many branches
  "PLR0913", # Too many arguments to function call
  "PLR0915", # Too many statements
  "PLR2004", # Magic value used in comparison
  "PLW2901", # Outer variable overwritten by inner target
  "SIM102",  # Use a single if statement instead of nested if statements
  "SIM103",  # Return the condition directly
  "SIM108",  # Use ternary operator instead of if-else-block

  # Moving imports into type-checking blocks can mess with pytest.patch()
  "TC001", # Move application import into a type-checking block
  "TC002", # Move third-party import into a type-checking block
  "TC003", # Move standard library import into a type-checking block
  "TC006", # Add quotes to type expression in typing.cast()

  "TRY003", # Avoid specifying long messages outside the exception class
  "TRY400", # Use `logging.exception` instead of `logging.error`
]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"tests".msg = "You should not import tests"

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["elm327_obdii"]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.per-file-ignores]
"src/elm327_obdii/profiles/*" = ["TID252"]
"src/elm327_obdii/__main__.py" = ["T20"]
"tests/*" = ["TID252", "S101", "SLF001", "PTH"]
"src/*" = ["PTH"]

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.codespell]
ignore-words-list = ["ECT"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "network: tests that require network access (deselected by default)",
]
